--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
-.flex-container{
+.flex-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+button {
+    width: 150px;
+    height: auto;
+    background-color: rgb(75, 255, 255);
+    border-radius: 3px;
+    font-size: xx-large;
 }
